@@ -1,3 +1,8 @@
+1998-10-11  Carsten Schaar  <nhadcasc@fs-maphy.uni-hannover.de>
+
+	* gnobots.c(main): Replaced 'gnome_client_new_default' with
+ 	'gnome_master_client' call.  Enabled setting the current directory.
+
 Thu Sep 24 06:48:19 BST 1998 Mark Rae <Mark.Rae@ed.ac.uk>
 
         * gnobots.c  - Fixed Help Menu
